# thinkalound

backend/: .env.example  .gitignore  examplestt.py  exampletts.py  main.py  mongo.js  output.txt  package-lock.json  package.json  requirements.txt  server.js  testMongo.js  upload-and-chat.py
codequestionbot/: .gitignore  PLAN.md  README.md  auth.md  backend.md  dev.md  frontend.md  llm.md  teacher.md
codequestionbot/backend/: pyproject.toml
codequestionbot/backend/api/: auth_routes.py  routes.py
codequestionbot/backend/app/: main.py  tasks.py
codequestionbot/backend/auth/: __init__.py  crypto.py  jwt.py  oauth.py
codequestionbot/backend/config/: __init__.py  config.yaml  prompts.yaml
codequestionbot/backend/db/: __init__.py  models.py  storage.py
codequestionbot/backend/llm/: interface.py  module.py
codequestionbot/backend/services/: github.py  grading.py  ingestion.py  repo_ingest.py  snippets.py
codequestionbot/backend/tests/: test_github_client.py  test_llm_interface.py  test_repo_ingest.py  test_snippets.py
codequestionbot/frontend/: index.html  package-lock.json  package.json  tsconfig.json
codequestionbot/frontend/src/: App.tsx  api.ts  config.ts  main.tsx  styles.css  types.ts
frontend/: vite.config.ts
frontend/src/: AIInterviewer.css  AIInterviewer.tsx  App.css  App.tsx  index.css
frontend/test/: app.js  pdf-test.html  style.css
